About section image stretch fixed v1

--- a/src/App.css
+++ b/src/App.css
@@ -266,7 +266,7 @@ nav ul li{
 }
 .about-img{
   width: 100%;
-  height: fit-content;
+  height: auto;
 }
 
 .about h3{
